# ragchatbot

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt  run.sh
backend/: ai_generator.py  app.py  config.py  document_processor.py  models.py  rag_system.py  search_tools.py  session_manager.py  vector_store.py
docs/: course1_script.txt
frontend/: index.html  style.css
