[project]
name = "ragchatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.14"
dependencies = [
    "anthropic>=0.83.0",
    "chromadb>=1.5.1",
    "fastapi[standard]>=0.133.0",
    "numpy==1.26.4",
    "onnxruntime==1.17.3",
    "sentence-transformers==2.6.1",
    "torch==2.2.2",
]
